--- a/src/componentes/Organizacao/index.scss
+++ b/src/componentes/Organizacao/index.scss
@@ -1,13 +1,16 @@
-h1{
+.titulo{
+
     font-size: 60px;
+    font-size: 30px;
+    text-align: center;
+
+   h1{
+    margin-top: 30px;
     margin-bottom: 20px;
-    
+   }
+
+
 }
 
-h3{
-    font-size: 30px;
-}
-.titulo{
-    text-align: center;
-   
-}
+
+
