--- a/src/componentes/modals/index.scss
+++ b/src/componentes/modals/index.scss
@@ -17,6 +17,7 @@
         height: 10px;
         padding: 1rem;
         width: 150px;
+        
     }
 
     &__titulo{
@@ -39,6 +40,8 @@
     &__botao{
         display: flex;
         gap: 2rem;
+        
+        
     }
 
     .no{
@@ -68,5 +71,13 @@
         cursor: pointer;
     }
     
+    input{
+        border: none;
+        padding: 5px;
+        border-radius: 10px;
+        text-align: center; 
+          
+    }
+   
 
 }
